@@ -1,6 +1,7 @@
 cm4all-workshop (6.0.21) unstable; urgency=low
 
-  * switch to the beng-proxy control protocol
+  * control: switch to the beng-proxy control protocol
+  * control: accept VERBOSE, DISABLE_QUEUE, ENABLE_QUEUE only from local clients
   * systemd: depend on "cm4all-spawn-accessory.socket", not ".service"
 
  --   
